data/derived/sp14/progs/unify/prog2962.ml.out
Characters 32-61:
  let stringOfList f l = sepConcat(";", List.map(fun c -> c l));;
                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type string
